[sphere_msgs.scp]: Updated message list with the following changes
	-Added: cont_full_items, msg_fatigue_weight
	-Removed: cont_full, cont_magic, cont_toosmall, msg_heavy, msg_overload
	-Updated: cont_full_weight

17-03-2020, Coruja
Fixed: HEARALL function not working correctly.
Fixed: BackpackMaxWeight setting on sphere.ini not allowing unlimited weight when set to -1.
[sphereCrypt.ini]: Added crypt key for classic client 7.0.85 and enhanced client 4.0.85

20-03-2020, Coruja
Fixed: Containers not checking sub-containers weight correctly.
Fixed: WEIGHTREDUCTION item property not working correctly.

27-03-2020, Coruja
Fixed: Triggers @PreStart (skills) / @SkillPreStart (chars) incorrectly setting char ACTION before skill start.
Changed: Updated internal Libev libs v4.31 to v4.33.

10-04-2020, Coruja
Fixed: Snooping skill revealing hidden chars at wrong moment.

11-04-2020, Coruja
Fixed: Skills getting increased to 6553.5 when set to a negative value.

14-04-2020, Coruja
Fixed: Char stamina not decreasing correctly when walk/run while overweight.
[sphere.ini]: Updated default value of StaminaLossAtWeight and RunningPenalty settings
	-IMPORTANT: It's HIGHLY recommended update these values to make stamina decrease correctly.

19-04-2020, Coruja
Fixed: Server crash when FreezeRestartTime setting on sphere.ini is set to an value > 214748364.
[items/sphere_item_building_doors.scp]: Misc updates
[items/sphere_item_deco_virtues.scp]: Misc updates
[items/sphere_item_holiday_anniversary.scp]: Added new items from publish 106
[items/sphere_item_profession_cook_barkeep_baker.scp]: Added new items from publish 106
[sphere_skills.scp]: Updated Anatomy, Animal Lore, Arms Lore, Eval Int, Fishing, Forensic Eval, Item ID, Lumberjacking, Mining and Taste ID skills

18-05-2020, Coruja
Changed: Optimized internal network socket engine.
Fixed: Server crash when console get many "variable exceeded max length" warnings in a row.